# surfh

./: .gitignore  README.md  build.py  fusion_real_data.py  generate_real_data.py  generate_real_data_2.py  project_summary.md  pyproject.toml  real_data_simulation.py  small_fusion_real_data.py  small_fusion_simulated_data.py  test_fusion_mixing.py  test_mixing_ST.py  test_mixing_model.py  test_script.py  test_slices_and_cubes.py
docs/source/: conf.py  index.rst
local_script/: test_parallelization.py
notebooks/: interpolation_real_slits_to_surfh_model.ipynb  mrs_wcs_resampling.ipynb  nfinder_orion.ipynb  nmf_ngc7023.ipynb  nmf_orion.ipynb  nmf_orion_3chan.ipynb  nmf_orion_allband.ipynb  nmf_orion_multi_band.ipynb  pca_ngc7023.ipynb  pca_orion.ipynb  slices_extraction.ipynb  slit_local_fov_extraction.ipynb  webbpsf_generation.ipynb
scripts/: compare_fits_target_regarding_position.py  compare_mean_flux_fusion_vs_real_data.py  correct_RA_DEC_corrected_slices.py  correct_rotation_slices.py  correction_mrs_data.py  deconvolution_mrs_noRotation.py  deconvolution_mrs_single_wavelength.py  filter_corrected_mrs_data.py  find_target_from_cal_file.py  fusion_real_data.py  fusion_real_data_multi_chan.py  list_shape_channels.py  main_fusion.py  make_cube_from_maps.py  map_cube_vizualizer.py  pca_templates_ngc_scan.py  pca_templates_orion_scan.py  perf_dft.py  plot_region_cube.py  plot_spectra.py  plot_spectra_result.py  profile_cython_shepard_interpolation.py  profile_shepard_interpolation.py  read_corrected_mrs_data.py  simulate_deconvolution_mrs_rectangle.py  swipe_filter_corrected_mrs_data.py  test_shepard_interpolation.py  webbpsf_generation.py
scripts/fusion/: convert_fits_to_numpy_slices.py  fusion_CT_simulated.py  fusion_LST_simulated.py  fusion_MCMO_SigRLSCT_NN_simulated.py  fusion_MCMO_SigRLSCT_realData.py  fusion_MCMO_SigRLSCT_simulated.py  fusion_MO_ST_simulated.py  fusion_MO_SigRLSCT_simulated.py  fusion_RLT_simulated.py  fusion_SCT_simulated.py  fusion_ST_simulated.py  fusion_SigRLCT_simulated.py  fusion_SigRLSCT_NN_simulated.py  fusion_SigRLSCT_simulated.py  fusion_SigRLT_simulated.py  fusion_largeMCMO_SigRLSCT_NN_simulated.py  generate_real_data_2.py  generate_real_data_all_fits.py  generate_real_data_single_fits.py  test_fusion_mixing.py
scripts/learning/: test_fov_orion_mrs.py  test_interpolate.py  testfov.py
surfh/: AsyncProcessPool.py  AsyncProcessPoolLight.py  CFAsyncProcessPool.py  NpShared.py  __init__.py  algorithm.py  algorithms.py  criterions.py  cython_2D_interpolation.py  cythons_files.pyx  dummymiri.py  functions_phd.py  fusion.py  ifu.py  instru.py  lab.py  miri.py  models.py  models_shared.py  mrs.py  quality.py  realmiri.py  scipy_interpolate.py  scipy_optimize_python_interpolate.py  shared_dict.py  smallmiri.py  smallmrs.py  utils.py
test/: cython_2D_interpolation.py  cythons_files.pyx  global_variable_testing.py  sandbox_dottest.py  sandbox_dottest_slicer.py  sandbox_dottest_wblur.py  sandbox_nearest_neighbor_interpn.py  sandbox_new_nearest_nieghbor_interpn.py  scipy_optimize_cython_interpolate.py  scipy_optimize_python_interpolate.py  scipy_python_interpolate.py  test_accel_accuracy.py  test_case_1_1.py  test_fw_ad.py  test_interpolation.py  test_scipy_vs_custom_interpolation.py  test_zip.py
(+77 files in other folders)
