[tool.poetry]
name = "surfh"
version = "0.1.0"
description = "SUper Resolution and Fusion for Hyperspectral images"
authors = ["François Orieux <orieux@l2s.centralesupelec.fr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.2"
scipy = "^1.8.0"
qmm = "^0.11.0"
udft = "^3.4.0"
astropy = "^5.0.1"
loguru = "^0.6.0"
ipdb = "^0.13.9"
matplotlib = "^3.5.1"
xarray = "^0.21.1"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
mypy = "^0.931"
icecream = "^2.1.1"
black = "^22.1.0"
bump2version = "^1.0.1"
pylint = "^2.12.2"
flake8 = "^4.0.1"
pytype = "^2022.2.8"
rich = "^11.2.0"
see = "^1.4.1"
jupyterlab = "^3.3.2"
yapf = "^0.32.0"
jupyter-contrib-nbextensions = "^0.5.1"
ipympl = "^0.8.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore-missing-imports = true
