[tool.poetry]
name = "surfh"
version = "0.1.0"
description = "SUper Resolution and Fusion for Hyperspectral images"
authors = ["François Orieux <francois.orieux@universite-paris-saclay.fr>", "Ralph Abirizk  <ralph.abirizk@universite-paris-saclay.fr>"]
maintainers = ["François Orieux <francois.orieux@universite-paris-saclay.fr>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/sidiso/surfh/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed", ]
include = ["LICENSE"]





[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aljabr = {git = "https://github.com/forieux/aljabr.git"}
numpy = "^1.22.2"
scipy = "^1.8.0"
qmm = "0.14.0"
udft = "^3.4.0"
astropy = "^5.0.1"
loguru = "^0.6.0"
matplotlib = "^3.5.1"
xarray = "^0.21.1"
progressbar2 = "^4.2.0"
sharedarray = "^3.2.3"
cython = "^3.0.5"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
mypy = "^0.931"
icecream = "^2.1.1"
black = "^22.1.0"
bump2version = "^1.0.1"
pylint = "^2.12.2"
flake8 = "^4.0.1"
rich = "^11.2.0"
see = "^1.4.1"
jupyterlab = "^3.3.2"
yapf = "^0.32.0"
jupyter-contrib-nbextensions = "^0.5.1"
ipympl = "^0.8.8"
frappuccino = "^0.0.8"
ipdb = "^0.13.9"


[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'

[mypy]
ignore-missing-imports = true
